Static data is transformed into backend

--- a/frontend/src/components/user/layout/header/Header.scss
+++ b/frontend/src/components/user/layout/header/Header.scss
@@ -37,7 +37,7 @@
       object-fit: cover;
     }
 
-    .devine-mercy {
+    .divine-mercy {
       position: absolute;
       bottom: 0;
       right: 1rem;
