User contribution functionality is completed

--- a/frontend/src/styles/Mixins.scss
+++ b/frontend/src/styles/Mixins.scss
@@ -130,6 +130,11 @@
   cursor: pointer;
 }
 
+@mixin display {
+  display: flex;
+  flex-direction: row;
+  gap: 0.3rem;
+}
 // ==============================================================================================
 // Button styling
 // ==============================================================================================
