--- a/frontend/src/views/userSignupPage/UserSignupPage.scss
+++ b/frontend/src/views/userSignupPage/UserSignupPage.scss
@@ -1,5 +1,5 @@
-@import '../../styles/Variables.scss';
-@import '../../styles/Mixins.scss';
+@import "../../styles/Variables.scss";
+@import "../../styles/Mixins.scss";
 
 /* Labtop screen size */
 @media screen and (min-width: 1024px) {
@@ -10,135 +10,6 @@
 
       .user-signup-title {
         @include title;
-      }
-
-      .error-message {
-        @include errorMessage;
-      }
-
-      .register-field {
-        @include fieldset;
-
-        .user-image-container {
-          @include flexColumnCenter;
-
-          .user-image {
-            @include userImage;
-          }
-
-          .register-legend {
-            @include legend;
-          }
-        }
-
-        .register-form {
-          .register-input-fields-container {
-            @include twoGridTemplateEqualColumns;
-
-            .input-container {
-              @include inputContainer;
-
-              .input-icon {
-                @include inputIcon;
-              }
-
-              .input-field {
-                @include inputField;
-              }
-
-              .input-label {
-                @include inputLabel;
-              }
-
-              .input-highlight {
-                @include inputHighlight;
-              }
-
-              .input-field:focus + .input-label {
-                @include focusInputFieldAndInputLabel;
-              }
-
-              .input-field:focus + .input-label + .input-highlight {
-                width: 100%;
-              }
-
-              .icon {
-                @include passwordDisplay;
-              }
-            }
-          }
-
-          .consent-and-others-container {
-            @include twoGridTemplateEqualColumns;
-
-            .consent-terms-button-login-container {
-              display: flex;
-              flex-direction: column;
-              gap: 1rem;
-
-              .register-consent {
-                display: flex;
-                flex-direction: row;
-                margin-bottom: 1rem;
-
-                .register-consent-input {
-                  margin-right: 1rem;
-                }
-
-                // styling the checkbox
-                .register-consent-input[type='checkbox'] {
-                  width: 30px;
-                  height: 20px;
-                }
-
-                .accept {
-                  font-size: $nfs;
-                }
-
-                .terms-of-user {
-                  font-size: $nfs;
-                  color: $blue;
-                  padding-left: 0.5rem;
-                }
-              }
-
-              .register-button {
-                @include button1;
-
-                .loading {
-                  @include loader;
-                }
-              }
-
-              .haveAccount {
-                font-size: $nfs;
-                margin-top: 1.5rem;
-
-                .login-link {
-                  font-weight: bold;
-                  font-size: $afs;
-                  color: $blue;
-                }
-              }
-            }
-
-            .password-preconditions {
-              display: block;
-
-              .password-checkbox {
-                background-color: transparent;
-                @include shadow2;
-                padding: 1rem;
-                border-radius: 0.5rem;
-
-                .text {
-                  line-height: $aafs;
-                  font-size: $nfs;
-                }
-              }
-            }
-          }
-        }
       }
     }
   }
