Committee members functionality is done

--- a/frontend/src/styles/Mixins.scss
+++ b/frontend/src/styles/Mixins.scss
@@ -66,6 +66,14 @@
   margin-top: 1rem;
 }
 
+@mixin threeGridTemplateEqualColumns {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 1rem;
+  column-gap: 1rem;
+  margin-top: 1rem;
+}
+
 @mixin inputContainer {
   position: relative;
   display: flex;
