--- a/frontend/src/components/parishAdmin/membersContribution/MembersContribution.scss
+++ b/frontend/src/components/parishAdmin/membersContribution/MembersContribution.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/Mixins.scss";
 
 .members-contribution-wrapper {
-  width: $mobile;
+  width: $laptop;
   margin: 1rem auto;
   .members-contribution-title {
     @include subTitle;
