--- a/frontend/src/components/user/changePassword/UserChangePassword.scss
+++ b/frontend/src/components/user/changePassword/UserChangePassword.scss
@@ -1,9 +1,11 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .user-change-password-container {
-  width: 70%;
+  width: 50%;
   margin: 1rem auto;
+  @include shadow2;
+
   .user-change-password-title {
     @include subTitle;
   }
