--- a/frontend/src/components/parishAdmin/committeeCard/CommitteeCard.scss
+++ b/frontend/src/components/parishAdmin/committeeCard/CommitteeCard.scss
@@ -6,10 +6,11 @@
   @include shadow2;
 
   .image-container {
+    margin-top: 2rem;
     .image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      width: 12rem;
+      height: 12rem;
+      object-fit: contain;
     }
 
     .figcaption {
