User authentication and authorization

--- a/frontend/src/views/userLoginPage/UserLoginPage.scss
+++ b/frontend/src/views/userLoginPage/UserLoginPage.scss
@@ -1,7 +1,7 @@
 @import "../../styles/Variables.scss";
 @import "../../styles/Mixins.scss";
 
-.lagin-page {
+.login-page {
   .login-page-container {
     width: 50%;
     margin: 2rem auto;
