--- a/frontend/src/components/parishPriest/allServices/AllChurchServices.scss
+++ b/frontend/src/components/parishPriest/allServices/AllChurchServices.scss
@@ -1,15 +1,54 @@
-
 @import "../../../styles/Variables.scss";
 @import "../../../styles/Mixins.scss";
 
 .action-wrapper {
+  @include flexRow;
+
+  .delete {
+    @include deleteIcon;
+  }
+
+  .edit {
+    @include editIcon;
+  }
+}
+
+.church-services-table-wrapper {
+    position: relative;
+}
+
+.service-delete-confirmation-wrapper {
+    @include shadow1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #e4eaf1;
+    padding: 2rem 3rem;
+
+
+  .delete-icon {
+    @include deleteIcon;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+
+  .you-want-delete {
+    @include subTitle;
+  }
+
+  .cancel-or-confirm-delete {
     @include flexRow;
+    align-items: center;
 
-    .delete {
-        @include deleteIcon;
+    .cancel-delete {
+      @include button2;
+      background-color: tomato;
     }
 
-    .edit {
-        @include editIcon;
+    .confirm-delete {
+      @include button2;
     }
+  }
 }
