--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -44,6 +44,7 @@ $priestSidebar-bg: #dedef8;
 $google-button-bg: #d6ebfc;
 $tab-bg: #edf0f3;
 $modal-bg: #d8b5fbd4;
+$value-bg: #e9ecef;
 
 // Hover
 $userSidebar-hover: #e4c7f9;
@@ -61,7 +62,7 @@ $radius: 4px;
 $borderColor: #ced4da;
 
 // Width View
-$desktop: 85%;
-$laptop: 90%;
-$tablet: 95%;
-$mobile: 98%;
+$desktop: 70%;
+$laptop: 80%;
+$tablet: 90%;
+$mobile: 95%;
