--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -12,6 +12,7 @@ $black: #212529;
 $white: #ffffff;
 $gray: #808080;
 $table_border: #ddd;
+$iconColor: #6c757d;
 
 // hover
 $button-hover: #86bae5;
@@ -39,11 +40,11 @@ $aside-bg: #f0f8ff;
 $footer-bg: #9fafdf;
 $button-bg: #4682b4;
 $editbg-bg: #ebebf8;
-$userSidebar-bg: #dbb1f8;
-$priestSidebar-bg: #dedef8;
+$userSidebar-bg: #e9ecef;
+$priestSidebar-bg: #f8f9fa;
 $google-button-bg: #d6ebfc;
 $tab-bg: #edf0f3;
-$modal-bg: #d8b5fbd4;
+$modal-bg: #dee2e6d7;
 $value-bg: #e9ecef;
 
 // Hover
