--- a/frontend/src/components/parishAdmin/events/Events.scss
+++ b/frontend/src/components/parishAdmin/events/Events.scss
@@ -24,8 +24,15 @@
       margin-top: 0;
 
       .inputs-wrapper {
-        @include twoGridTemplateEqualColumns;
+        @include threeGridTemplateEqualColumns;
+        margin: 0;
       }
+
+      .event-address-and-date {
+        @include twoGridTemplateEqualColumns;
+        margin: 0;
+      }
+
       .input-container {
         @include inputContainer;
 
