--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -35,7 +35,7 @@ $navbar-bg: #97c3e7;
 $header: #f0f8ff;
 $priest-header-bg: #e6e6facc;
 $main-bg: #f8f8ff;
-$section-bg: #dedef8;
+$section-bg: #ebf2fa;
 $aside-bg: #f0f8ff;
 $footer-bg: #9fafdf;
 $button-bg: #4682b4;
