--- a/frontend/src/components/layout/navbar/Navbar.scss
+++ b/frontend/src/components/layout/navbar/Navbar.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/Variables.scss';
-@import '../../../../styles/Mixins.scss';
+@import '../../../styles/Variables.scss';
+@import '../../../styles/Mixins.scss';
 
 .header-navbar {
   width: 100%;
