--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -1,6 +1,6 @@
 // Fonts
-$font: 'Roboto Condensed', sans-serif;
-$font-family: 'Ubuntu Mono', monospace;
+$font: "Roboto Condensed", sans-serif;
+$font-family: "Ubuntu Mono", monospace;
 
 // Font Color
 $green: #228b22;
@@ -11,6 +11,7 @@ $orange: #f9d491;
 $black: #212529;
 $white: #ffffff;
 $gray: #808080;
+$lightGray: #d3d3d3;
 $table_border: #ddd;
 $iconColor: #6c757d;
 
@@ -37,9 +38,10 @@ $priest-header-bg: #e6e6facc;
 $main-bg: #f8f8ff;
 $section-bg: #ebf2fa;
 $aside-bg: #f0f8ff;
-$footer-bg: #9fafdf;
-$button-bg: #4682b4;
-$editbg-bg: #ebebf8;
+$footer-bg: #2b2d42;
+$copyright-bg: #4a4e69;
+$button-bg: #007bff;
+$edit-bg: #ebebf8;
 $userSidebar-bg: #e9ecef;
 $priestSidebar-bg: #f8f9fa;
 $google-button-bg: #d6ebfc;
@@ -52,6 +54,7 @@ $userSidebar-hover: #e4c7f9;
 $priestSidebar-hover: #cfcffb;
 $google-button-hover: #bedcf5;
 $tab-hover: #d5e6f4;
+$button-hover: #0056b3;
 
 // padding
 $buttonPadding: 0.2rem;
