--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -8,7 +8,7 @@ $blue: #4b4bf5;
 $red: #ff2a04;
 $tomato: #fd7b65;
 $orange: #f9d491;
-$black: #212529;
+$black: #2b2d42;
 $white: #ffffff;
 $gray: #808080;
 $lightGray: #d3d3d3;
@@ -43,15 +43,16 @@ $copyright-bg: #4a4e69;
 $button-bg: #007bff;
 $edit-bg: #ebebf8;
 $userSidebar-bg: #e9ecef;
-$priestSidebar-bg: #f8f9fa;
+$sidebar-bg: #dee2e6;
 $google-button-bg: #d6ebfc;
 $tab-bg: #edf0f3;
 $modal-bg: #dee2e6d7;
 $value-bg: #e9ecef;
+$form-bg: #e9ecef;
 
 // Hover
 $userSidebar-hover: #e4c7f9;
-$priestSidebar-hover: #cfcffb;
+$sidebar-hover: #e9ecef;
 $google-button-hover: #bedcf5;
 $tab-hover: #d5e6f4;
 $button-hover: #0056b3;
