--- a/frontend/src/views/adminPages/adminDashboarPage/AdminDashboardPage.scss
+++ b/frontend/src/views/adminPages/adminDashboarPage/AdminDashboardPage.scss
@@ -8,7 +8,7 @@
 
     .admin-dashboard-page-title {
       @include title;
-      background-color: $priestSidebar-bg;
+      background-color: $sidebar-bg;
     }
 
     .admin-dashboarw-sections-wrapper {
