--- a/frontend/src/views/priestPages/priestDashboardPage/PriestDashboardPage.scss
+++ b/frontend/src/views/priestPages/priestDashboardPage/PriestDashboardPage.scss
@@ -8,7 +8,7 @@
 
     .parish-priest-dashboard-page-title {
       @include title;
-      background-color: $priestSidebar-bg;
+      background-color: $sidebar-bg;
     }
 
     .parish-priest-dashboard-wrapper {
