--- a/frontend/src/components/contact/contactPageTools/ContactTools.scss
+++ b/frontend/src/components/contact/contactPageTools/ContactTools.scss
@@ -6,32 +6,31 @@
   margin: auto;
   @include shadow1;
   border-radius: 0.2rem;
-  padding: 1rem 2rem;
   @include flexColumn;
 
-  .contact-media-icon-container {
+  .contact-media-items {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
   }
 
   .contact-media-header {
     display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 1rem;
+
+    .contact-icon {
+      font-size: $aafs;
+      color: $iconColor;
+      margin-right: 0.2rem;
+    }
   }
 
   .contact-media-link-to {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    line-height: 2rem;
+    font-size: $nfs;
+    margin-left: 1.8rem;
   }
 
-  .contact-icon {
-    font-size: 2.5rem;
-    color: $green;
+  .contact-media-link-to a {
+    color: $blue;
   }
 }
 
@@ -39,11 +38,6 @@
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .contact-media-wrapper {
     @include flexColumn;
-    @include shadow1;
-
-    .contact-media-items {
-      @include shadow1;
-    }
   }
 }
 
@@ -51,11 +45,6 @@
 @media screen and (min-width: 1024px) {
   .contact-media-wrapper {
     @include flexColumn;
-    @include shadow1;
-
-    .contact-media-items {
-      @include shadow1;
-    }
   }
 }
 
