--- a/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
+++ b/frontend/src/components/financeManager/financeManagerSidebar/FinanceMgtSidebar.scss
@@ -4,7 +4,7 @@
 .finance-manager-dashboard-sidebar-wrapper {
   width: 16%;
   min-height: 100vh;
-  background-color: $priestSidebar-bg;
+  background-color: $sidebar-bg;
 
   .finance-manager-dashboard-sidebar-title {
     @include subTitle;
@@ -17,7 +17,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: $priestSidebar-hover;
+      background-color: $sidebar-hover;
     }
 
     .active-icon {
