--- a/frontend/src/components/parishAdmin/events/Events.scss
+++ b/frontend/src/components/parishAdmin/events/Events.scss
@@ -3,8 +3,9 @@
 
 .events-section-wrapper{
   width: $laptop;
-  margin: 1rem auto;
+  margin: 2rem auto;
   @include shadow2;
+  background-color: $form-bg  ;
 
   .events-section-title {
     @include subTitle;
