--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Fira+Sans:wght@200;300;400;500;600;700;800;900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Fira+Sans:wght@200;300;400;500;600;700;800;900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -9,6 +9,7 @@
 }
 
 body {
-  font-family: 'Fira Sans';
+  font-family: "Fira Sans";
   font-weight: 500;
+  background-color: #f8f9fa;
 }
