--- a/frontend/src/components/contact/contactPageForm/ContactForm.scss
+++ b/frontend/src/components/contact/contactPageForm/ContactForm.scss
@@ -7,6 +7,7 @@
   padding-bottom: 1rem;
   @include shadow1;
   border-radius: 0.2rem;
+  background-color: $form-bg; 
 
   .contact-page-form-title {
     @include subTitle;
