--- a/frontend/src/components/forms/mass/MassForm.scss
+++ b/frontend/src/components/forms/mass/MassForm.scss
@@ -4,7 +4,7 @@
 .form-mass-container {
   background-color: $form-bg;
   width: $laptop;
-  margin: 0 auto;
+  margin: 2rem auto;
   padding: 1rem 1.5rem;
   border-radius: $radius;
 
