--- a/frontend/src/components/parishAdmin/members/Members.scss
+++ b/frontend/src/components/parishAdmin/members/Members.scss
@@ -12,7 +12,8 @@
 
   .new-member-wrapper {
     @include flexSpaceBetween;
-    margin-bottom: 1rem;
+    margin: 2rem 0;
+
     .title {
       @include subTitle;
     }
