--- a/frontend/src/components/forms/event/AddEvent.scss
+++ b/frontend/src/components/forms/event/AddEvent.scss
@@ -2,10 +2,9 @@
 @import "../../../styles/Mixins.scss";
 
 .event-form-wrapper {
-  width: $laptop;
-  margin: 2rem auto;
   @include shadow2;
   background-color: $form-bg;
+  margin-bottom: 2rem;
 
   .event-form-title {
     @include subTitle;
