--- a/frontend/src/components/parishAdmin/membersContribution/MembersContribution.scss
+++ b/frontend/src/components/parishAdmin/membersContribution/MembersContribution.scss
@@ -11,6 +11,7 @@
 
   .add-contribution-aside {
     @include flexSpaceBetween;
+    margin: 2rem 0;
 
     .add-contribution-aside-title {
       @include subTitle;
