--- a/frontend/src/components/parishPriest/churchCommittee/ChurchCommittee.scss
+++ b/frontend/src/components/parishPriest/churchCommittee/ChurchCommittee.scss
@@ -3,10 +3,14 @@
 
 .committees-container {
   width: $laptop;
-  margin: 1rem auto;
+  margin: 2rem auto;
 
   .committees-title {
     @include subTitle;
+  }
+
+  .access-information {
+    @include paragraph;
   }
 
   .committee-query-form {
