--- a/frontend/src/styles/Mixins.scss
+++ b/frontend/src/styles/Mixins.scss
@@ -194,16 +194,16 @@
   height: 45px;
   padding: 8px;
   border-radius: 5px;
-  border: 2.5px solid #e0e1e4;
+  border: 2.5px solid #cae9ff;
   box-shadow: 0px 0px 20px -20px;
   cursor: pointer;
-  background-color: $white;
+  background-color: #5fa8d3;
   transition: all 0.2s ease-in-out 0ms;
   user-select: none;
   font-family: "Poppins", sans-serif;
 
   &:hover {
-    background-color: #f2f2f2;
+    background-color: #5fa8d3c4;
     box-shadow: 0px 0px 20px -18px;
     color: $red;
   }
