--- a/frontend/src/components/parishAdmin/charts/Charts.scss
+++ b/frontend/src/components/parishAdmin/charts/Charts.scss
@@ -16,7 +16,12 @@
     right: 2rem;
 
     .year-input-field {
-      @include button2;
+      padding: 0.7rem;
+      border: 1px solid #ced4da;
+      border-radius: 4px;
+      outline: none;
+      font-size: 16px;
+      transition: border-color 0.3s ease;
       cursor: none;
     }
 
